--- a/runtime/Makefile
+++ b/runtime/Makefile
@@ -1,11 +1,11 @@
-CC=gcc
-CFLAGS=-std=c11
-EDEPS='../lang/parser.c' '../lang/tokenizer.c' '../lang/token.c' \
-	  '../lang/ast_node.c' 'evaluator.c' '../lang/dispatch_table.c' \
-	  '../lang/procedure.c' '../runtime/wrappers.c' '../init/init_dispatch.c' \
-	  '../lang/arg.c' '../lang/args.c' '../turtle/turtle.c' '../init/init_turtle.c'
-LFLAGS=-lm
-ESRC='evaluator_test.c'
+CC=g++
+CFLAGS=-std=c++11
+EDEPS='../lang/parser.cpp' '../lang/tokenizer.cpp' '../lang/token.cpp' \
+	  '../lang/ast_node.cpp' 'evaluator.cpp' '../lang/dispatch_table.cpp' \
+	  '../lang/procedure.cpp' '../runtime/wrappers.cpp' '../init/init_dispatch.cpp' \
+	  '../lang/arg.cpp' '../lang/args.cpp' '../turtle/turtle.cpp' '../init/init_turtle.cpp' '../rendering/render_turtle.cpp'
+LFLAGS=-lm -lallegro -lallegro_primitives
+ESRC='evaluator_test.cpp'
 EOBJ='evaluator_test.out'
 
 evaluator_test:
